# FederatedLearning-SNN

./: .gitignore  LICENSE  README.md  acc_hist.csv  centralized_accuracy.csv  centralized_loss.csv  distributed_loss.csv  example.nir  experiments.py  iid.csv  main.py  nir_model.nir  non-iid.csv  plot.ipynb  plot_path.csv  pyproject.toml  requirements.txt  run_biograd_training.py  snn_net.pt  snn_net_3_epochs_30_batches.pt  standalone.csv  test.py
FL/: CNN.py  biogradClient.py  client.py  configLoad.py  server.py  spide_client.py  training_utils.py
SNN_Models/: EventProp.py  SNN.py  SNN_standalone.py  SNN_utils.py  Spide.py  network_cells.py  nmnist_compact_dataset.py  nmnist_data_saving.py  nmnist_dataset.py  run_backprop_training.py  run_biograd_training.py  snn_spide_mnist_lenet.py  training_backprop.py  training_biograd.py
SNN_Models/old/: SNN_standalone.py  evaluation.ipynb  snn_spide_module.py
Training/: dataset.py
biograd/: biograd_utils.py  network_cells.py  network_w_biograd copy.py  network_w_biograd.py  online_error_functions.py  run_biograd_training.py  training_biograd.py
cluster_scripts/: check_environment.job  create_env.job  run_experiments.job
cluster_scripts/experiments/: fl.bash  fl.bat  run_SG_central.job  run_biograd_standalone.job  run_eventprop.job  test_fl_sg.job  test_standalone.job
conf/: config.yaml
conf/model/: EVENTPROP.yaml  SNN.yaml  SPIDE.yaml  biograd.yaml  net.yaml
conf/strategy/: fedNova.yaml  fedadam.yaml  fedavg.yaml  fedopt.yaml  fedprox.yaml
modules/: snn_modules.py
outputs/2025-04-24/14-44-28/: results.pkl
outputs/2025-04-24/14-55-10/: results.pkl
outputs/2025-05-26/00-17-51/: results.pkl
outputs/2025-05-27/13-58-45/: results.pkl
outputs/2025-05-27/14-06-51/: results.pkl
outputs/2025-05-27/14-27-25/: results.pkl
outputs/2025-05-27/14-30-53/: results.pkl
outputs/2025-05-27/14-42-18/: results.pkl
outputs/2025-05-27/14-45-41/: results.pkl
outputs/2025-05-27/14-50-26/: results.pkl
outputs/2025-05-27/14-56-59/: results.pkl
src/: SNN_standalone.py  nir_test.py
src/FederatedSNN/: __init__.py
(+504 files in other folders)
