[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "FederatedSNN"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/j0sh162/FederatedLearning-SNN"
Issues = "https://github.com/j0sh162/FederatedLearning-SNN/issues"
