#All configurations for this project, simply run pip install -e .
#it will from the root,read the pyproject.toml, install all listed dependencies
[project]
name = "FederatedLearning-SNN"
description = "Federated learning with SNN methods using Flower and PyTorch"
version="0.1.0"
authors = [
  { name="We can put our names"}
]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch",
    "torchvision",
    "ray[default]",
    "hydra-core",
    "numpy<2.0.0",
    "tonic",
    "pandas",
    "snntorch",
    "rich",
    "matplotlib",
    "progress",
    "tensorboard"
]

[tool.setuptools]
packages = ["FL", "SNN_Models","Training"]
